--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Deepak Kumar",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.3",
     "pug": "^3.0.2"
   }
 }
